# 2026-03-tronlink-wallet-recovery-reference

./: README.md  note_seeds.json  pyproject.toml  repro.py  step_by_step.md  target.hash  tronlink_wallet_recovery_case.md
recovery/shared_prefs/: carlitosmenem991.xml  carlitosmenem991_mainNet.xml  db_key_store.xml  f_Tron.xml  f_TronKey.xml  f_Tron_3.8.0.xml  wc_key_store.xml
smart_recovery/: README.md  pyproject.toml
smart_recovery/smart_recovery/: __init__.py  __main__.py
smart_recovery/smart_recovery/examples/: note_seeds.example.json  target.example.hash
smart_recovery/smart_recovery/examples/recovery/shared_prefs/: sample_wallet.xml
smart_recovery/smart_recovery/runtime/rules/: toggle_case.rule
smart_recovery/smart_recovery/tests/: __init__.py  test_cli.py  test_hashcat_runner.py  test_planner.py  test_report_patterns.py  test_seeds.py  test_state.py
smart_recovery/smart_recovery/toolkit/: __init__.py  cli.py  hashcat_runner.py  models.py  planner.py  report_patterns.py  seeds.py  state.py
tools/: decrypt_mnemonic.py  extract_hash.py
zygote-injection-toolkit/: README.md  pyproject.toml
zygote-injection-toolkit/tests/: test_main.py  test_runtime_dependencies.py
zygote-injection-toolkit/zygote_injection_toolkit/: __main__.py  stage1.py
