[project]
name = "smart-recovery"
version = "0.1.0"
description = "Hashcat orchestration layer for ranked human-first password recovery"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = ["smart_recovery"]
