[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zygote_injection_toolkit"
version = "0.1"
dependencies = []
requires-python = ">=3"
description = "Toolkit for Android Zygote lab acquisition and controlled data extraction"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
  "Programming Language :: Python"
]
